--- a/1_cdr_seq_IMGT.ipynb
+++ b/1_cdr_seq_IMGT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "id": "fb7c0015",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 41,
    "id": "6d085082",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 42,
    "id": "a1c19c3a",
    "metadata": {},
    "outputs": [
@@ -1011,10 +1011,10 @@
     {
      "data": {
       "text/plain": [
-       "0.11299920082092285"
+       "0.11700773239135742"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "id": "777fd842",
    "metadata": {},
    "outputs": [
@@ -1053,7 +1053,7 @@
        "6030"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1064,7 +1064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "id": "d85ffcf0",
    "metadata": {},
    "outputs": [
@@ -1083,7 +1083,7 @@
        " 'Structure (IMGT)\\r\\n']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 45,
    "id": "84ffcdde",
    "metadata": {
     "scrolled": true
@@ -1172,7 +1172,7 @@
        " 'Structure (IMGT)\\r\\n']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 46,
    "id": "2516a5e9",
    "metadata": {},
    "outputs": [
@@ -1202,7 +1202,7 @@
        " 'Structure (IMGT)\\r\\n']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 47,
    "id": "fc9a034c",
    "metadata": {},
    "outputs": [
@@ -1223,7 +1223,7 @@
        "['7nwl', 'MUS', 'MUSCULUS', 'ELECTRON', 'MICROSCOPY', '3.1', 'Å', 'Fab', 'DE:']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 48,
    "id": "ccb6100b",
    "metadata": {},
    "outputs": [
@@ -1244,7 +1244,7 @@
        "'DE'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 49,
    "id": "116c9635",
    "metadata": {},
    "outputs": [
@@ -1265,7 +1265,7 @@
        "['L1:', 'SIISSNY']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 50,
    "id": "1b6c3245",
    "metadata": {},
    "outputs": [
@@ -1286,7 +1286,7 @@
        "['H3:', 'TRIGYDEDYAMDH']"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1297,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 51,
    "id": "096f4d2f",
    "metadata": {},
    "outputs": [
@@ -1307,7 +1307,7 @@
        "['Structure', '(as', 'PDB)']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 52,
    "id": "13c5500b",
    "metadata": {
     "scrolled": true
@@ -1381,7 +1381,7 @@
        " 'Structure (IMGT)\\r\\n']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 53,
    "id": "5004e706",
    "metadata": {},
    "outputs": [
@@ -1405,7 +1405,7 @@
        "['7lg6', 'LAMA', 'GLAMA', 'X-RAY', 'DIFFRACTION', '1.871', 'Å', 'Fab', 'PR:']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 54,
    "id": "b79d4736",
    "metadata": {},
    "outputs": [
@@ -1426,7 +1426,7 @@
        "['L1:', 'QYVDRS']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "id": "884cc95d",
    "metadata": {},
    "outputs": [
@@ -1447,7 +1447,7 @@
        "['H3:', 'GRVVDGFNAAGPLEF']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1458,7 +1458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 56,
    "id": "18852e8d",
    "metadata": {},
    "outputs": [
@@ -1468,7 +1468,7 @@
        "['Fab', 'KN:']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 57,
    "id": "947b85c6",
    "metadata": {
     "scrolled": true
@@ -1489,7 +1489,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████| 6030/6030 [00:00<00:00, 80393.56it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████| 6030/6030 [00:00<00:00, 49424.31it/s]\n"
      ]
     }
    ],
@@ -1503,14 +1503,14 @@
     "        line = res[i][j].split()\n",
     "        if len(line[0])==4 and line[0][0].isdigit():\n",
     "            pdb_name = line[0]\n",
-    "            HeavyLightChains = line[-1].split(\":\")[0].upper()\n",
+    "            HeavyLightChains = line[-1].split(\":\")[0]#.upper()\n",
     "#             if len(HeavyLightChains)==2:\n",
     "#                 if HeavyLightChains[0].upper() == HeavyLightChains[1].upper():\n",
     "#                     HeavyLightChains[0] = HeavyLightChains[0].upper()\n",
     "#                     HeavyLightChains[1] = HeavyLightChains[1].lower()\n",
     "            entry[pdb_name] = {HeavyLightChains:{}}\n",
     "        elif len(line[0])==3 and line[0][0]==\"F\":\n",
-    "            HeavyLightChains = line[-1].split(\":\")[0].upper()\n",
+    "            HeavyLightChains = line[-1].split(\":\")[0]#.upper()\n",
     "#             if len(HeavyLightChains)==2:\n",
     "#                 if HeavyLightChains[0].upper() == HeavyLightChains[1].upper():\n",
     "#                     HeavyLightChains[0] = HeavyLightChains[0].upper()\n",
@@ -1532,7 +1532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 58,
    "id": "35dd6e8c",
    "metadata": {},
    "outputs": [
@@ -1542,7 +1542,7 @@
        "(6029, '7nwl', 'DE')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 59,
    "id": "37804b36",
    "metadata": {},
    "outputs": [
@@ -1574,7 +1574,7 @@
        "  'H3': 'TRGFGDGGYFDV'}}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1585,7 +1585,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 60,
+   "id": "d145f4f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'EE': {'L1': 'KSLLHSNGNTY',\n",
+       "  'L2': 'RMS',\n",
+       "  'L3': 'MQHLEYPLT',\n",
+       "  'H1': 'GFAFSSFG',\n",
+       "  'H2': 'ISSGSGTI',\n",
+       "  'H3': 'VRSIYYYGSSPFDF'}}"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "entry[\"7t6s\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "id": "ef15d588",
    "metadata": {},
    "outputs": [
@@ -1630,7 +1656,7 @@
        "  'H3': 'GRVVDGFNAAGPLEF'}}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1641,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 62,
    "id": "beae9312",
    "metadata": {},
    "outputs": [
@@ -1651,7 +1677,7 @@
        "{'B': {'H1': 'GLLFRLAS', 'H2': 'ITVGGKT', 'H3': 'NTASPAVGADT'}}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1662,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 63,
    "id": "e39fe6b9",
    "metadata": {},
    "outputs": [
@@ -1677,7 +1703,7 @@
        "  'H3': 'VRSIYYYGSSPFDF'}}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1688,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 64,
    "id": "7eacc98f",
    "metadata": {},
    "outputs": [
@@ -1698,7 +1724,7 @@
        "6030"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1709,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 65,
    "id": "f4889069",
    "metadata": {},
    "outputs": [
@@ -1728,7 +1754,7 @@
        " '4kq4']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1739,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 66,
    "id": "d06c63da",
    "metadata": {},
    "outputs": [
@@ -1760,7 +1786,7 @@
        "  'H3': 'VRKHYSYDGVVY'}}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1771,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 67,
    "id": "0ae8d9da",
    "metadata": {},
    "outputs": [
@@ -1816,7 +1842,7 @@
        "  'H3': 'GRVVDGFNAAGPLEF'}}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1827,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 68,
    "id": "3a001ab6",
    "metadata": {},
    "outputs": [
@@ -1843,7 +1869,7 @@
        " 'K': {'H1': 'GRTISRYA', 'H2': 'ARRSGDGA', 'H3': 'AIDSDTFYSGSYDY'}}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1854,14 +1880,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 69,
    "id": "dc68f635",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'MN': {'L1': 'QSVSSA',\n",
+       "{'mn': {'L1': 'QSVSSA',\n",
        "  'L2': 'SAS',\n",
        "  'L3': 'QQGDPRLVT',\n",
        "  'H1': 'GFNFSSSS',\n",
@@ -1873,7 +1899,7 @@
        "  'H1': 'GFNFSSSS',\n",
        "  'H2': 'ISSSSGST',\n",
        "  'H3': 'ARTYGWYYSWWWAFDY'},\n",
-       " 'PQ': {'L1': 'QSVSSA',\n",
+       " 'pq': {'L1': 'QSVSSA',\n",
        "  'L2': 'SAS',\n",
        "  'L3': 'QQGDPRLVT',\n",
        "  'H1': 'GFNFSSSS',\n",
@@ -1885,7 +1911,7 @@
        "  'H1': 'GFNFSSSS',\n",
        "  'H2': 'ISSSSGST',\n",
        "  'H3': 'ARTYGWYYSWWWAFDY'},\n",
-       " 'IK': {'L1': 'QSVSSA',\n",
+       " 'ik': {'L1': 'QSVSSA',\n",
        "  'L2': 'SAS',\n",
        "  'L3': 'QQGDPRLVT',\n",
        "  'H1': 'GFNFSSSS',\n",
@@ -1903,7 +1929,13 @@
        "  'H1': 'GFNFSSSS',\n",
        "  'H2': 'ISSSSGST',\n",
        "  'H3': 'ARTYGWYYSWWWAFDY'},\n",
-       " 'FG': {'L1': 'QSVSSA',\n",
+       " 'fg': {'L1': 'QSVSSA',\n",
+       "  'L2': 'SAS',\n",
+       "  'L3': 'QQGDPRLVT',\n",
+       "  'H1': 'GFNFSSSS',\n",
+       "  'H2': 'ISSSSGST',\n",
+       "  'H3': 'ARTYGWYYSWWWAFDY'},\n",
+       " 'ab': {'L1': 'QSVSSA',\n",
        "  'L2': 'SAS',\n",
        "  'L3': 'QQGDPRLVT',\n",
        "  'H1': 'GFNFSSSS',\n",
@@ -1917,7 +1949,7 @@
        "  'H3': 'ARTYGWYYSWWWAFDY'}}"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1928,7 +1960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 70,
    "id": "9cc79aea",
    "metadata": {},
    "outputs": [],
@@ -1950,21 +1982,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 71,
    "id": "5daa5097",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6030"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# data = json.load(open(\"./data/cdr_seqs_20221128.json\", \"rb\"))\n",
     "# len(data.keys())"
@@ -1972,93 +1993,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 72,
    "id": "1d055fba",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'XY': {'L1': 'SSVNH',\n",
-       "  'L2': 'LTS',\n",
-       "  'L3': 'QQWSGNPWT',\n",
-       "  'H1': 'GFTFSRYT',\n",
-       "  'H2': 'ISGGGHT',\n",
-       "  'H3': 'TRGFGDGGYFDV'},\n",
-       " 'HL': {'L1': 'SSVNH',\n",
-       "  'L2': 'LTS',\n",
-       "  'L3': 'QQWSGNPWT',\n",
-       "  'H1': 'GFTFSRYT',\n",
-       "  'H2': 'ISGGGHT',\n",
-       "  'H3': 'TRGFGDGGYFDV'}}"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# data[\"1mhp\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 73,
    "id": "898380d1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Z': {'H1': 'GSIFSINT', 'H2': 'ISSGGST', 'H3': 'YGLSYSNDDY'},\n",
-       " 'd:': {'H1': 'GSIFSINT', 'H2': 'ISSGGST', 'H3': 'YGLSYSNDDY'},\n",
-       " 'N:': {'H1': 'GSIFSINT', 'H2': 'ISSGGST', 'H3': 'YGLSYSNDDY'},\n",
-       " 'X:': {'H1': 'GSIFSINT', 'H2': 'ISSGGST', 'H3': 'YGLSYSNDDY'},\n",
-       " 'b:': {'H1': 'GSIFSINT', 'H2': 'ISSGGST', 'H3': 'YGLSYSNDDY'},\n",
-       " 'L:': {'H1': 'GSIFSINT', 'H2': 'ISSGGST', 'H3': 'YGLSYSNDDY'},\n",
-       " 'V:': {'H1': 'GSIFSINT', 'H2': 'ISSGGST', 'H3': 'YGLSYSNDDY'},\n",
-       " 'D:': {'H1': 'GSIFSINT', 'H2': 'ISSGGST', 'H3': 'YGLSYSNDDY'},\n",
-       " 'F:': {'H1': 'GSIFSINT', 'H2': 'ISSGGST', 'H3': 'YGLSYSNDDY'},\n",
-       " 'J:': {'H1': 'GSIFSINT', 'H2': 'ISSGGST', 'H3': 'YGLSYSNDDY'},\n",
-       " 'T:': {'H1': 'GSIFSINT', 'H2': 'ISSGGST', 'H3': 'YGLSYSNDDY'},\n",
-       " 'H:': {'H1': 'GSIFSINT', 'H2': 'ISSGGST', 'H3': 'YGLSYSNDDY'},\n",
-       " 'R:': {'H1': 'GSIFSINT', 'H2': 'ISSGGST', 'H3': 'YGLSYSNDDY'},\n",
-       " 'B:': {'H1': 'GSIFSINT', 'H2': 'ISSGGST', 'H3': 'YGLSYSNDDY'},\n",
-       " 'f:': {'H1': 'GSIFSINT', 'H2': 'ISSGGST', 'H3': 'YGLSYSNDDY'},\n",
-       " 'P:': {'H1': 'GSIFSINT', 'H2': 'ISSGGST', 'H3': 'YGLSYSNDDY'}}"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# data[\"7st3\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 74,
    "id": "ceece9be",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6idk IJ\n",
-      "6idk HL\n",
-      "6idk MN\n",
-      "6idl IJ\n",
-      "6idl MN\n",
-      "6idi IJ\n",
-      "6idi MN\n",
-      "6idi HL\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# data_1 = {}\n",
     "\n",
@@ -2080,59 +2038,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 75,
    "id": "507f2d8d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6027"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# len(data_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 76,
    "id": "55caa1a9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'IJ': {'L1': 'SSNIGSSY',\n",
-       "  'L2': 'RNN',\n",
-       "  'L3': 'AAWDDSLRGQV',\n",
-       "  'H1': None,\n",
-       "  'H2': 'ISYDGSNK',\n",
-       "  'H3': 'VRVRQPWTQAWSTNYFYYYGMDV'},\n",
-       " 'MN': {'L1': 'SSNIGSSY',\n",
-       "  'L2': 'RNN',\n",
-       "  'L3': 'AAWDDSLRGQV',\n",
-       "  'H1': None,\n",
-       "  'H2': 'ISYDGSNK',\n",
-       "  'H3': 'VRVRQPWTQAWSTNYFYYYGMDV'},\n",
-       " 'HL': {'L1': 'SSNIGSSY',\n",
-       "  'L2': 'RNN',\n",
-       "  'L3': 'AAWDDSLRGQV',\n",
-       "  'H1': None,\n",
-       "  'H2': 'ISYDGSNK',\n",
-       "  'H3': 'VRVRQPWTQAWSTNYFYYYGMDV'}}"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# data[\"6idi\"]"
    ]
@@ -2147,7 +2066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 77,
    "id": "752e9fd8",
    "metadata": {},
    "outputs": [],
@@ -2159,21 +2078,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 78,
    "id": "89b836b3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "6027"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# data = json.load(open(\"./data/cdr_seqs_20221128.json\", \"rb\"))\n",
     "# len(data.keys())"
